# ASH-Model

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  ROLLBACK_PRE_SKIR.md  axioms-of-existence.json  pyproject.toml  references.bib  simulation.py
.github/: copilot-instructions.md  discussion_agents.json  discussion_topic_generator.json  pull_request_template.md  wiki-sync.json
changelog/: CHANGELOG.md
config/: ash_mapping_v1.json  ash_physics_sector_mixing_v1.json  ash_r010_unit_bridge_calibration.json  ash_r011_finite_observer_limit_contract.json  ash_r012_background_contract.json  ash_r013_perturbation_contract.json  ash_r014_data_product_registry.json  ash_r014_likelihood_contract.json  ash_r015_prediction_lock_contract.json  ash_r016_branch_centered_closure_contract.json
data/: README.md  ablation-results.csv  ash-state-reference.csv  branch-topology.json  codewords.csv  simulation-controls.json  simulation-metadata.json  simulation-results.csv  skir-control-results.json
docs/: ASH-Model.md  ASH-research-paper.md  appendices.md  audit-resolution.md  canonical-code.md  canonical-computational-specification.md  claim-language-policy.md  consistency-validation-report.md  data-accuracy-audit.md  falsification-and-controls.md  final-live-repository-audit.md  mathematical-accuracy-review.md  mathematical-proof.md  mirmir-integration.md  python-code-validation.md  python-smoke-validation.md  repository-data-audit.md  repository-data-integration-plan.md  repository-review.md  research-paper  skir-code-validation.md  (+3 more)
(+414 files in other folders)
