[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ash-model"
version = "1.1.0"
description = "Deterministic reference implementation of the Adinkra-Stabilized Hypercube model"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "James Daley"}]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
